# slogemann1--datamuse-api-wrapper

./: Cargo.toml
src/: lib.rs  request.rs  response.rs
