[package]
name = "datamuse-api-wrapper"
version = "0.2.0"
authors = ["slogemann1 <sllogemann1@gmail.com>"]
edition = "2018"
description = "A wrapper library for the Datamuse api"
license = "MIT"
repository = "https://github.com/slogemann1/datamuse-api-wrapper"
readme = "README.md"
keywords = ["word", "english", "autocomplete", "api", "datamuse"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = [ "full", "macros" ] }

